--- a/KDIC/Base.lproj/Main_iPhone.storyboard
+++ b/KDIC/Base.lproj/Main_iPhone.storyboard
@@ -72,12 +72,15 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="lEZ-JT-cEq">
-                                <rect key="frame" x="0.0" y="35" width="40" height="40"/>
+                                <rect key="frame" x="0.0" y="30" width="45" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <state key="normal" image="Menu-Icon.png">
+                                <state key="normal" image="icon-29.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="menuButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="NRQ-cn-iOn"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -100,7 +103,7 @@
         <scene sceneID="39k-qL-tdg">
             <objects>
                 <tableViewController storyboardIdentifier="Schedule" id="end-Ob-wk3" customClass="ScheduleViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="XyV-DI-DnS">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="XyV-DI-DnS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -117,8 +120,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Menu-Icon.png" width="48" height="48"/>
         <image name="iTunesArtwork.png" width="512" height="512"/>
+        <image name="icon-29.png" width="29" height="29"/>
         <image name="kdic-wide.png" width="960" height="198"/>
         <image name="play.png" width="256" height="256"/>
         <image name="volume_max.png" width="512" height="512"/>
